# SENG2021_random_group

./: .replit  README.md  pyproject.toml  server.py
SourceCode_and_Documentation/: server.py
SourceCode_and_Documentation/plus_one/: pubspec.yaml
SourceCode_and_Documentation/plus_one/android/app/: build.gradle  google-services.json
SourceCode_and_Documentation/plus_one/assets/: README.md
SourceCode_and_Documentation/plus_one/integration_test/: app_test.dart
SourceCode_and_Documentation/plus_one/ios/: Podfile
SourceCode_and_Documentation/plus_one/ios/Runner/: AppDelegate.swift  Info.plist
SourceCode_and_Documentation/plus_one/ios/Runner.xcodeproj/: project.pbxproj
SourceCode_and_Documentation/plus_one/lib/: main.dart
SourceCode_and_Documentation/plus_one/lib/src/pages/: create_path_screen_dt.dart  edit_path_screen.dart  home_nav_bar.dart  homescreen.dart  loading_page.dart  personal_details_page.dart  view_path_screen.dart
SourceCode_and_Documentation/plus_one/lib/src/providers/: event.dart  events.dart  path.dart  paths.dart  weather.dart
SourceCode_and_Documentation/plus_one/lib/src/singleton/: client_store.dart  client_store_base.dart
SourceCode_and_Documentation/plus_one/lib/src/styling/: color_palettes.dart  custom_text_styles.dart
SourceCode_and_Documentation/plus_one/lib/src/utils/: age_calculator.dart  auth_service.dart  chat_messages.dart  user_profile.dart  (+2 more)
SourceCode_and_Documentation/plus_one/test/: widget_test.dart
SourceCode_and_Documentation/plus_one/web/: index.html  manifest.json
SourceCode_and_Documentation/server/: server.py
(+25 files in other folders)
