[tool.poetry]
name = "repl_python3_SENG2021randomgroup"
version = "0.1.0"
description = ""
authors = ["farisjalal <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-cors = "^3.0.10"
werkzeug = "^1.0.1"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
